Greatly simplify CSS, dark theme fixes
- Changed: Make all color codes 3-char. Shave off a few bytes.
- Removed: all responsive layout besides the navigation links.
  Everything else should work well at all window sizes without making
  allowances for special cases.
- Removed: redundant CSS rules
- Added: centered images. Left-aligned images in a center-aligned column
  of text break flow.
- Added: dark mode link colors for visited/active. Active link colors
  give better a11y.
- Fix: don't show unnecessary scrollbar for <pre> blocks

Also put more comments in the source to explain why each rule is
important.

All this shrunk the CSS from 1065 bytes to 882 bytes (17% reduction)

--- a/themes/etch-custom/assets/css/dark.css
+++ b/themes/etch-custom/assets/css/dark.css
@@ -1,19 +1,24 @@
 @media (prefers-color-scheme: dark) {
 	html {
-		background: black;
-		color: white;
+		background: #000;
+		color: #fff;
 	}
 
 	a {
-		color: #00b1ed;
+		color: #0af;
 	}
 
-	hr {
-		border-color: #5c5c5c;
+	a:visited {
+		color: #d7c;
+	}
+
+	a:active {
+		color: #f33;
 	}
 
 	pre,
-	code {
-		border: 1px solid #333;
+	code,
+	hr {
+		border-color: #333;
 	}
 }
